--- a/.github/workflows/run_lightning_timeseries.yml
+++ b/.github/workflows/run_lightning_timeseries.yml
@@ -19,7 +19,7 @@ jobs:
         python-version: '3.11'
         
     - name: Create Conda environment
-      run: conda env create -f test.yml
+      run: conda env create -f /nickmesa.github.io/test.yml
 
     - name: Activate Conda environment
       run: echo "conda activate myenv" >> $GITHUB_ENV
