--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,5 +24,5 @@ jobs:
 
     - name: Run lightning_timeseries.py
       run: 
-        conda activate myenv
+        conda activate test
         python lightning_timeseries.py
