--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,5 +24,6 @@ jobs:
 
     - name: Run lightning_timeseries.py
       run: 
+        conda init
         conda activate test
         python lightning_timeseries.py
