--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,6 +24,6 @@ jobs:
 
     - name: Run lightning_timeseries.py
       run: 
-        conda init
+        conda init test
         conda activate test
         python lightning_timeseries.py
