--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -32,5 +32,5 @@ jobs:
     - name: Upload figure artifact
       uses: actions/upload-artifact@v3
       with:
-          name: total_energy_timeseries
-          path: Total_Energy_Timeseries_Figs/total_energy_timeseries.png
+          name: total_energy_timeseries.png
+          path: total_energy_timeseries.png
