--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,6 +29,10 @@ jobs:
         conda activate test
         python .github/workflows/lightning_timeseries.py
 
+    - name: List files
+      run: |
+        ls -al
+
     - name: Upload figure artifact
       uses: actions/upload-artifact@v3
       with:
