--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         git config --global user.name 'nickmesa'
         git config --global user.email 'nickmesa021@gmail.com'
-        git add total_energy_timeseries.png
+        git add Total_Energy_Timeseries_Figs/total_energy_timeseries.png
         git commit -m 'Add output image'
         git push
       env:
