--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -39,4 +39,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: figure
-        path: figure.png
+        path: /home/runner/work/nickmesa.github.io/nickmesa.github.io/figure.png
