--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -32,8 +32,8 @@ jobs:
         conda activate test
         python .github/workflows/lightning_timeseries.py
 
-    - name: List directory contents
-      run: ls -la
+    - name: List files in output directory
+      run: ls -R Total_Energy_Timeseries_Figs
 
     - name: Upload figure as artifact
       uses: actions/upload-artifact@v3
