--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -31,6 +31,7 @@ jobs:
         source $(conda info --base)/etc/profile.d/conda.sh
         conda activate test
         python lightning_timeseries.py
+        echo $PATH
       shell: bash
 
     -  name: Print working directory
