--- a/.github/workflows/lightning_timeseries.yml
+++ b/.github/workflows/lightning_timeseries.yml
@@ -14,22 +14,29 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Miniconda
-      uses: conda-incubator/setup-miniconda@v2
-      with:
-        auto-update-conda: true
-        python-version: '3.11'
-        activate-environment: test
-
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
 
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install numpy
+        pip install boto3
+        pip install botocore
+        pip install io
+        pip install pandas
+        pip install matplotlib
+        pip install ftplib
+        pip install cartopy
+        pip install datetime
+        pip install netCDF4
+        pip install os
+    
+
     - name: Run lightning_timeseries script
       run: 
-        source $(conda info --base)/etc/profile.d/conda.sh
-        conda activate test
         python lightning_timeseries.py
 
     - name: Commit and push changes
