--- a/.github/workflows/lightning_timeseries.yml
+++ b/.github/workflows/lightning_timeseries.yml
@@ -1,7 +1,8 @@
 name: Lightning Timeseries
 
 on:
-  workflow_dispatch:
+  schedule:
+    - cron: "*/15 * * * *"  # Runs every 15 minutes
 
 permissions:
   contents: write  # Grant the necessary permission to write to the repository
